--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/lab": "^5.0.0-alpha.65",
     "@mui/material": "5.10.5",
+    "@reduxjs/toolkit": "^1.9.2",
     "apexcharts": "^3.23.1",
     "autoprefixer": "^10.4.10",
     "clsx": "1.2.1",
@@ -31,18 +32,23 @@
     "nodemailer": "^6.7.6",
     "paytmchecksum": "^1.5.0",
     "postcss": "^8.4.16",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-image-magnifiers": "^1.4.0",
     "react-image-magnify": "^2.7.4",
     "react-image-zoom": "^1.3.1",
+    "react-multi-carousel": "^2.8.2",
     "react-multilevel-dropdown": "^3.0.3",
+    "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-simple-image-slider": "^2.4.1",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.0.8",
     "react-top-loading-bar": "^2.3.1",
+    "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
