--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-image-magnify": "^2.7.4",
+    "react-image-zoom": "^1.3.1",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
