--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ NEXT_PUBLIC_PAYTM_MID='GxuHox14365893631930'
 PAYTM_MKEY='FitNa5YjIcHc6yCE'
 NEXT_PUBLIC_EMAIL1='abhirupkumar2003@gmail.com'
 NEXT_PUBLIC_EMAIL2='lesoftindia22@gmail.com'
+RAZORPAY_KEY='rzp_test_fftwCZRtnChWNz'
+RAZORPAY_SECRET='UdlfZ1SVOqqX4HTC6f60gX7v'
