--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://localhost:27017/miss_neha
+MONGO_URI=mongodb://localhost:27017/lesoft
 NEXT_PUBLIC_HOST=http://localhost:3000
 NEXT_PUBLIC_PAYTM_HOST=https://securegw.paytm.in
 AES_SECRET='FGF432543VSG452BKDHE6621VHHBDQW6HBJWJHB6723GVDE2V72H'
