--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0",
     "next": "^13.2.1",
+    "node-mailjet": "^6.0.2",
     "node-sass": "^7.0.3",
     "nodemailer": "^6.9.1",
     "paytmchecksum": "^1.5.0",
