--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ RAZORPAY_KEY='rzp_test_fftwCZRtnChWNz'
 RAZORPAY_SECRET='UdlfZ1SVOqqX4HTC6f60gX7v'
 NEXT_PUBLIC_EMAIL1='abhirupkumar2003@gmail.com'
 NEXT_PUBLIC_EMAIL2='lesoftindia22@gmail.com'
+NEXT_PUBLIC_MAILJET_API_KEY=b26aea2a6101f6c1756c33fb1ef58c36
+NEXT_PUBLIC_MAILJET_SECRET_KEY=9d7c3cfc0cfc6200ff05d7139a0870e6
+NEXT_PUBLIC_MAIL_ADDRESS='lesoftindia22@gmail.com'
