--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-alice-carousel": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-image-zoom": "^1.3.1",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
